--- a/src/app.css
+++ b/src/app.css
@@ -15,6 +15,8 @@
     line-height: inherit;
     border-radius: unset;
     color: inherit;
+    image-rendering: pixelated;
+    user-select: unset;
 }
 
 html, body {
@@ -28,8 +30,4 @@ html, body {
     font-size: 10px;
     line-height: 5px;
     color: var(--color-primary);
-}
-
-img {
-    image-rendering: pixelated;
 }
