Updated seventh font with the latest tweaks

--- a/src/app.css
+++ b/src/app.css
@@ -2,6 +2,7 @@
     --color-background: #0e0c18;
     --color-primary: #42486b;
     --color-secondary: #222034;
+    --color-secondary-dark: #141022;
 }
 
 * {
