Added main menu scene with the general information about game

--- a/src/app.css
+++ b/src/app.css
@@ -26,7 +26,7 @@ html, body {
     display: flex;
     align-items: center;
     justify-content: center;
-    background: black;
+    background: var(--color-background) !important;
     font-family: LazyFox6, serif;
     font-size: 10px;
     line-height: 5px;
