Fixed events random bool options and style changes

--- a/src/app.css
+++ b/src/app.css
@@ -1,6 +1,7 @@
 :root {
     --color-background: #0e0c18;
     --color-primary: #42486b;
+    --color-primary-bright: #717b9c;
     --color-secondary: #222034;
     --color-secondary-dark: #141022;
 }
